--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="row justify-content-end">
         <div class="col-3 text-center">
           <input type="radio" name="yaku" value="20end" id="pinfutsumo" onchange="calculate(this.name,this.value)">
-          <label for="pinfutsumo" class="label">ピンフツモ</label>
+          <label for="pinfutsumo" class="label">ﾋﾟﾝﾌﾂﾓ</label>
         </div>
         
         <div class="col-3 text-center">
@@ -90,7 +90,7 @@
       <div class="row justify-content-end">
         <div class="col-3 text-center">
           <input type="radio" name="agari" value="+10" id="menzenron" onchange="calculate(this.name,this.value)">
-          <label for="menzenron" class="label">面前ロン</label>
+          <label for="menzenron" class="label">面前ﾛﾝ</label>
         </div>
         
         <div class="col-3 text-center">
