--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
       }
       .furo{
         display: inline-block;
-        padding-bottom: 3px;
-        padding-left: 3px;
+        padding-bottom: 5px;
+        padding-left: 5px;
         transform: rotate(90deg);
-        padding-right: 1px;
-        margin-left: -3px;
-        margin-right: -1px;
+        margin-left: -2px;
       }
       input[type=radio]{
         display: none;
@@ -111,10 +109,22 @@
       </div>
 
       <div class="row mb-3">
+        <div class="col-2 text-center"></div>
+        <div class="col-6 text-center">
+          <div class="row">
+            <div class="col-5 p-0">2‐8</div>
+            <div class="col-2 p-0">｜</div>
+            <div class="col-5 p-0">1,9,字</div>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="row mb-3">
         <div class="col-2 text-center"><span id="pt2">0</span><span>×</span></div>
         <div class="col-6 text-center">
           <div class="row">
-            <div class="col-5 p-0">🀛<span class="furo">🀛</span>🀛</div>
+            <div class="col-5 p-0"><img src="./3pin.png"><img src="./3pin.png"><img src="./3pin.png" class="furo"></div>
             <div class="col-2 p-0">/</div>
             <div class="col-5 p-0">---</div>
           </div>
@@ -128,9 +138,9 @@
         <div class="col-2 text-center"><span id="pt4">0</span><span>×</span></div>
         <div class="col-6 text-center">
           <div class="row">
-            <div class="col-5 p-0">🀛🀛🀛</div>
+            <div class="col-5 p-0"><img src="./3pin.png"><img src="./3pin.png"><img src="./3pin.png"></div>
             <div class="col-2 p-0">/</div>
-            <div class="col-5 p-0">🀄<span class="furo">🀄</span>🀄</div>
+            <div class="col-5 p-0"><img src="./chun.png"><img src="./chun.png"><img src="./chun.png" class="furo"></div>
           </div>
         </div>
         <div class="col-2 text-center"><button onclick="increment('pt4', 1)">+4</button></div>
@@ -142,9 +152,9 @@
         <div class="col-2 text-center"><span id="pt8">0</span><span>×</span></div>
         <div class="col-6 text-center">
           <div class="row">
-            <div class="col-5 p-0">🀛<span class="furo">🀛</span>🀛🀛</div>
+            <div class="col-5 p-0"><img src="./3pin.png"><img src="./3pin.png"><img src="./3pin.png"><img src="./3pin.png" class="furo"></div>
             <div class="col-2 p-0">/</div>
-            <div class="col-5 p-0">🀄🀄🀄</div>
+            <div class="col-5 p-0"><img src="./chun.png"><img src="./chun.png"><img src="./chun.png"></div>
           </div>
         </div>
         <div class="col-2 text-center"><button onclick="increment('pt8', 1)">+8</button></div>
@@ -156,9 +166,9 @@
         <div class="col-2 text-center"><span id="pt16">0</span><span>×</span></div>
         <div class="col-6 text-center">
           <div class="row">
-            <div class="col-5 p-0">🀛🀫🀫🀛</div>
+            <div class="col-5 p-0"><img src="./3pin.png"><img src="./hai.png"><img src="./hai.png"><img src="./3pin.png"></div>
             <div class="col-2 p-0">/</div>
-            <div class="col-5 p-0">🀄<span class="furo">🀄</span>🀄🀄</div>
+            <div class="col-5 p-0"><img src="./chun.png"><img src="./chun.png"><img src="./chun.png"><img src="./chun.png" class="furo"></div>
           </div>
         </div>
         <div class="col-2 text-center"><button onclick="increment('pt16', 1)">+16</button></div>
@@ -171,7 +181,7 @@
           <div class="row">
             <div class="col-5 p-0">---</div>
             <div class="col-2 p-0">/</div>
-            <div class="col-5 p-0">🀄🀫🀫🀄</div>
+            <div class="col-5 p-0"><img src="./chun.png"><img src="./hai.png"><img src="./hai.png"><img src="./chun.png"></div>
           </div>
         </div>
         <div class="col-2 text-center"><button onclick="increment('pt32', 1)">+32</button></div>
