--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
         <div class="col-2 text-center"></div>
         <div class="col-6 text-center">
           <div class="row">
-            <div class="col-5 p-0">2‐8</div>
-            <div class="col-2 p-0">｜</div>
-            <div class="col-5 p-0">1,9,字</div>
+            <div class="col-5 p-0 border-bottom">2‐8</div>
+            <div class="col-2 p-0"></div>
+            <div class="col-5 p-0 border-bottom">1,9,字</div>
           </div>
         </div>
       </div>
@@ -125,7 +125,7 @@
         <div class="col-6 text-center">
           <div class="row">
             <div class="col-5 p-0"><img src="./3pin.png"><img src="./3pin.png"><img src="./3pin.png" class="furo"></div>
-            <div class="col-2 p-0">/</div>
+            <div class="col-2 p-0">or</div>
             <div class="col-5 p-0">---</div>
           </div>
         </div>
@@ -139,7 +139,7 @@
         <div class="col-6 text-center">
           <div class="row">
             <div class="col-5 p-0"><img src="./3pin.png"><img src="./3pin.png"><img src="./3pin.png"></div>
-            <div class="col-2 p-0">/</div>
+            <div class="col-2 p-0">or</div>
             <div class="col-5 p-0"><img src="./chun.png"><img src="./chun.png"><img src="./chun.png" class="furo"></div>
           </div>
         </div>
@@ -153,7 +153,7 @@
         <div class="col-6 text-center">
           <div class="row">
             <div class="col-5 p-0"><img src="./3pin.png"><img src="./3pin.png"><img src="./3pin.png"><img src="./3pin.png" class="furo"></div>
-            <div class="col-2 p-0">/</div>
+            <div class="col-2 p-0">or</div>
             <div class="col-5 p-0"><img src="./chun.png"><img src="./chun.png"><img src="./chun.png"></div>
           </div>
         </div>
@@ -167,7 +167,7 @@
         <div class="col-6 text-center">
           <div class="row">
             <div class="col-5 p-0"><img src="./3pin.png"><img src="./hai.png"><img src="./hai.png"><img src="./3pin.png"></div>
-            <div class="col-2 p-0">/</div>
+            <div class="col-2 p-0">or</div>
             <div class="col-5 p-0"><img src="./chun.png"><img src="./chun.png"><img src="./chun.png"><img src="./chun.png" class="furo"></div>
           </div>
         </div>
@@ -180,7 +180,7 @@
         <div class="col-6 text-center">
           <div class="row">
             <div class="col-5 p-0">---</div>
-            <div class="col-2 p-0">/</div>
+            <div class="col-2 p-0">or</div>
             <div class="col-5 p-0"><img src="./chun.png"><img src="./hai.png"><img src="./hai.png"><img src="./chun.png"></div>
           </div>
         </div>
