--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 
       <div class="row mt-4">
-        <div class="col-2 ">上がり</div>
+        <div class="col-2 ">和了</div>
         <div class="col point" id="agari">&nbsp;</div>
       </div>
 
@@ -109,7 +109,7 @@
       </div>
 
       <div class="row mb-3">
-        <div class="col-2 text-center"></div>
+        <div class="col-1 text-center"></div>
         <div class="col-6 text-center">
           <div class="row">
             <div class="col-5 p-0 border-bottom">2‐8</div>
@@ -121,7 +121,7 @@
 
 
       <div class="row mb-3">
-        <div class="col-2 text-center"><span id="pt2">0</span><span>×</span></div>
+        <div class="col-1 text-center"></div>
         <div class="col-6 text-center">
           <div class="row">
             <div class="col-5 p-0"><img src="./3pin.png"><img src="./3pin.png"><img src="./3pin.png" class="furo"></div>
@@ -129,13 +129,14 @@
             <div class="col-5 p-0">---</div>
           </div>
         </div>
+        <div class="col-1 text-center"></div>
         <div class="col-2 text-center"><button onclick="increment('pt2', 1)">+2</button></div>
         <div class="col-2 text-center"><button onclick="increment('pt2', -1)">-2</button></div>
       </div>
 
 
       <div class="row mb-3">
-        <div class="col-2 text-center"><span id="pt4">0</span><span>×</span></div>
+        <div class="col-1 text-center"></div>
         <div class="col-6 text-center">
           <div class="row">
             <div class="col-5 p-0"><img src="./3pin.png"><img src="./3pin.png"><img src="./3pin.png"></div>
@@ -143,13 +144,14 @@
             <div class="col-5 p-0"><img src="./chun.png"><img src="./chun.png"><img src="./chun.png" class="furo"></div>
           </div>
         </div>
+        <div class="col-1 text-center"></div>
         <div class="col-2 text-center"><button onclick="increment('pt4', 1)">+4</button></div>
         <div class="col-2 text-center"><button onclick="increment('pt4', -1)">-4</button></div>
       </div>
 
 
       <div class="row mb-3">
-        <div class="col-2 text-center"><span id="pt8">0</span><span>×</span></div>
+        <div class="col-1 text-center"></div>
         <div class="col-6 text-center">
           <div class="row">
             <div class="col-5 p-0"><img src="./3pin.png"><img src="./3pin.png"><img src="./3pin.png"><img src="./3pin.png" class="furo"></div>
@@ -157,13 +159,14 @@
             <div class="col-5 p-0"><img src="./chun.png"><img src="./chun.png"><img src="./chun.png"></div>
           </div>
         </div>
+        <div class="col-1 text-center"></div>
         <div class="col-2 text-center"><button onclick="increment('pt8', 1)">+8</button></div>
         <div class="col-2 text-center"><button onclick="increment('pt8', -1)">-8</button></div>
       </div>
 
 
       <div class="row mb-3">
-        <div class="col-2 text-center"><span id="pt16">0</span><span>×</span></div>
+        <div class="col-1 text-center"></div>
         <div class="col-6 text-center">
           <div class="row">
             <div class="col-5 p-0"><img src="./3pin.png"><img src="./hai.png"><img src="./hai.png"><img src="./3pin.png"></div>
@@ -171,12 +174,13 @@
             <div class="col-5 p-0"><img src="./chun.png"><img src="./chun.png"><img src="./chun.png"><img src="./chun.png" class="furo"></div>
           </div>
         </div>
+        <div class="col-1 text-center"></div>
         <div class="col-2 text-center"><button onclick="increment('pt16', 1)">+16</button></div>
         <div class="col-2 text-center"><button onclick="increment('pt16', -1)">-16</button></div>
       </div>
 
       <div class="row mb-3">
-        <div class="col-2 text-center"><span id="pt32">0</span><span>×</span></div>
+        <div class="col-1 text-center"></div>
         <div class="col-6 text-center">
           <div class="row">
             <div class="col-5 p-0">---</div>
@@ -184,6 +188,7 @@
             <div class="col-5 p-0"><img src="./chun.png"><img src="./hai.png"><img src="./hai.png"><img src="./chun.png"></div>
           </div>
         </div>
+        <div class="col-1 text-center"></div>
         <div class="col-2 text-center"><button onclick="increment('pt32', 1)">+32</button></div>
         <div class="col-2 text-center"><button onclick="increment('pt32', -1)">-32</button></div>
       </div>
@@ -249,7 +254,6 @@
       function increment(point, num) {
         if(counter[point] > 0 || num > 0){
           counter[point] += num;
-          document.getElementById(point).textContent = counter[point];
           calculate_mentsu();
         }  
       }
