--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       </div>      
 
 
-      <div class="row mt-4">
+      <div class="row mt-4 mb-3">
         <div class="col-2">面子</div>
         <div class="col point" id="mentsu">&nbsp;</div>
       </div>
@@ -259,7 +259,7 @@
       }
 
       function calculate_mentsu(){
-        document.getElementById('mentsu').textContent =  "";
+        document.getElementById('mentsu').textContent =  "　";
         for (let ptIdx in counter) {
           console.log(ptIdx);
           console.log(counter[ptIdx]);
